# NDKDemo

./: build.gradle
app/: build.gradle
app/src/androidTest/java/com/flag/demo/ndkdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_log.h  bitmap_util.cpp  bitmap_util.h  cv_helper.cpp  cv_helper.h  face_detection.cpp  face_recognition.cpp  hist_equalize.cpp  imgproc_native.cpp  integral_image.cpp  mat_native.cpp  native-lib.cpp  qrcode.cpp  util_native.cpp
app/src/main/cpp/audio/: MyAudio.cpp  MyAudio.h  MyFFmpeg.cpp  MyFFmpeg.h  MyJNICall.cpp  MyJNICall.h  MyPacketQueue.cpp  MyPacketQueue.h  MyPlayerState.h  MyPlayerStatus.h  media-player.cpp  music-player.cpp
app/src/main/cpp/base/: MyMedia.cpp  MyMedia.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/cpp/video/: MyVideo.cpp  MyVideo.h
app/src/main/java/com/flag/demo/ndkdemo/: AudioPlayerDemo.kt  AudioPlayerDemoActivity.kt  BitmapDemoActivity.kt  BitmapUtils.kt  FaceDetectionActivity.kt  MainActivity.kt  MainAdapter.kt  MediaErrorListener.java  MediaPreparedListener.java  MyVideoView.kt  VideoPlayerDemoActivity.kt
app/src/main/java/com/flag/demo/ndkdemo/opencv/: BMUtil.kt  CVType.kt  Imgproc.kt  Mat.kt
app/src/main/java/com/flag/demo/ndkdemo/utils/: FaceDetection.kt  MyPlayer.kt  OpenCVUtil.kt
app/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  CameraGLSurfaceView.java
app/src/main/res/layout/: activity_audio_player_demo.xml  activity_bitmap_demo.xml  activity_face_detection.xml  activity_main.xml  activity_video_player_demo.xml  item_rv_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/flag/demo/ndkdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
